--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -551,3 +551,17 @@ state={
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
+
+[res://THEORY/ccc_refactor_plan.md]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 51.0,
+"selection": false,
+"syntax_highlighter": "Markdown"
+}
