--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,17 +6,17 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=364
 dock_filesystem_v_split_offset=0
-dock_filesystem_display_mode=2
+dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://THEORY/ccc_refactor_plan.md")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/CCC/")
+dock_filesystem_selected_paths=PackedStringArray("res://SCENE_3C.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/CCC/", "res://Scripts/CCC/Core/", "res://Scripts/CCC/Control/", "res://Scripts/CCC/Config/", "res://Scripts/CCC/Character/", "res://Scripts/CCC/Camera/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=-100
+dock_split_2=6
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=587
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SCENE_3C.tscn", "res://Assets/SCENE_CCC.tscn")
-current_scene="res://Assets/SCENE_CCC.tscn"
-center_split_offset=-345
-selected_default_debugger_tab_idx=1
+open_scenes=PackedStringArray("res://SCENEX_CCC.tscn", "res://SCENE_CCC_controller.tscn")
+current_scene="res://SCENEX_CCC.tscn"
+center_split_offset=-368
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=4
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -45,7 +45,7 @@ size=Vector2i(3248, 1669)
 [ScriptEditor]
 
 open_scripts=["res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/Controllers/CameraRig.gd", "res://Scripts/CCC/Character/CCC_AnimationManagerComponent.gd", "res://Scripts/CCC/Character/CCC_AvatarComponent.gd", "res://Scripts/CCC/Core/CCC_CameraCore.gd", "res://Scripts/CCC/Camera/CCC_CameraDistanceComponent.gd", "res://Scripts/CCC/Camera/CCC_CameraFollowComponent.gd", "res://Scripts/CCC/Config/CCC_CharacterConfig.gd", "res://Scripts/CCC/CCC_CharacterController.gd", "res://Scripts/CCC/Core/CCC_CharacterCore.gd", "res://Scripts/CCC/Config/CCC_ConfigComponent.gd", "res://Scripts/CCC/Debug/CCC_DebugUI.gd", "res://Scripts/CCC/Control/CCC_DirectControlComponent.gd", "res://Scripts/CCC/Character/CCC_DirectMovementComponent.gd", "res://Scripts/CCC/Control/CCC_InputManagerComponent.gd", "res://Scripts/CCC/Control/CCC_KeyboardMouseComponent.gd", "res://Scripts/CCC/Camera/CCC_OrbitalCameraComponent.gd", "res://Scripts/CCC/Config/CCC_Presets.gd", "res://THEORY/ccc_refactor_plan.md", "res://Scripts/CCC/Control/CCC_TargetControlComponent.gd", "res://Scripts/CCC/Character/CCC_TargetMovementComponent.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
-selected_script="res://THEORY/3C_AdpatationToFramework.md"
+selected_script="res://Scripts/CCC/Debug/CCC_DebugUI.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
