--- a/.godot/editor/script_editor_cache-A0000H36DW4HXC6-5.cfg
+++ b/.godot/editor/script_editor_cache-A0000H36DW4HXC6-5.cfg
@@ -77,7 +77,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 49,
-"scroll_position": 11.0,
+"scroll_position": 26.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -101,12 +101,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 89.0,
-"selection": false,
+"row": 126,
+"scroll_position": 102.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 126,
 "syntax_highlighter": "GDScript"
 }
 
@@ -115,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 170,
-"scroll_position": 0.0,
+"row": 257,
+"scroll_position": 211.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -129,11 +133,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 103,
-"scroll_position": 75.0,
+"row": 32,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -189,7 +193,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 244,
-"scroll_position": 110.0,
+"scroll_position": 220.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
