--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CharacterComponents/MovementComponent.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://CCC.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/ControlComponents/", "res://Scripts/CharacterComponents/", "res://Scripts/CameraComponents/", "res://Assets/")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://CCC.tscn")
-current_scene="res://CCC.tscn"
+current_scene="res://SCENE.tscn"
 center_split_offset=-607
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [EditorWindow]
